--- a/src/style.css
+++ b/src/style.css
@@ -122,6 +122,9 @@ button.add-user:hover{
     padding: 0px 15px;
 
 }
+.chat-list-information-active{
+    background-color: #eff2f5;
+}
 
 .chat-list-information:hover{
     cursor: pointer;
@@ -130,9 +133,10 @@ button.add-user:hover{
 }
 
 .chat-detail-time{
+    font-size: 16px;
     align-items: flex-end;
     font-family: 'Kanit', sans-serif;
-    color: #888;
+    color: #000;
     width: 50px;
 
 }
