--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -35,6 +35,11 @@ body{
     overflow: auto;
 }
 
+.mini-loading{
+    width: 32px;
+    height: 32px;
+
+}
 .app-loading{
     width: 100%;
     height: 100%;
@@ -416,6 +421,21 @@ button.add-user:hover{
     
 }
 
+.welcome-message{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 500px;
+    height: 50px;
+    text-align: center;
+    padding-top: 15px;
+    font-size: 24px;
+}
+.welcome-message::after{
+    content: 'ßy Murat Y.';
+    display: block;
+    font-size: 10px;
+}
 .welcome{
     width: 500px;
     height: 400px;
@@ -423,8 +443,10 @@ button.add-user:hover{
     margin: 50px auto;
     border-radius: 10px;
     text-align: center;
-
+    white-space: pre-line;
+    font-family: 'Merriweather', serif;
 }
+
 
 .welcome-title{
     width: 100%;
