--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -235,9 +235,10 @@ button.add-user:hover{
 .chat-detail-title .chat-detail-last-message{
     text-overflow: ellipsis;
     overflow: hidden;
-    white-space: nowrap;
-    
+    width: 90%;
+    min-width: 150px;
 }
+
 
 .no-dialog{
     font-size: 14px;
