--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,32 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Merriweather:wght@300&family=Roboto&display=swap');
-*{
+
+* {
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
     font-family: 'Merriweather', serif;
 }
 
-a{
+a {
     color: #0000ff;
     text-decoration: underline;
     cursor: pointer;
 }
-body{
+
+body {
     height: 100vh;
     width: 100vw;
 }
-#root{
+
+#root {
     width: 100%;
     height: 100%;
 }
-.app{
-   width: 100%;
-   height: 100%;
-   display: flex;
-   flex-direction: row;
+
+.app {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
 }
 
-.chat-list-area{
+.chat-list-area {
     min-width: 500px;
     width: 30%;
     min-height: 650px;
@@ -35,30 +39,31 @@ body{
     overflow: hidden;
 }
 
-.chat-list{
+.chat-list {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 110px);
     overflow: auto;
 }
 
-.mini-loading{
+.mini-loading {
     width: 32px;
     height: 32px;
 
 }
-.app-loading{
+
+.app-loading {
     width: 100%;
     height: 100%;
     text-align: center;
     padding-top: 50px;
 }
 
-.app-loading img{
+.app-loading img {
     width: 200px;
     height: 200px;
 }
 
-.user-information{
+.user-information {
     padding: 10px 5px 0px 15px;
     min-width: 500px;
     width: 100%;
@@ -70,7 +75,7 @@ body{
     background-color: #eff2f5;
 }
 
-.username{
+.username {
     font-size: 24px;
     color: #000;
     width: 350px;
@@ -78,7 +83,8 @@ body{
     padding-left: 15px;
     font-family: 'Kanit', sans-serif;
 }
-.chat-list-filter{
+
+.chat-list-filter {
     padding-left: 15px;
     padding-right: 15px;
     width: 100%;
@@ -89,19 +95,21 @@ body{
     align-items: center;
     border-bottom: 1px solid #d1d7db;
 }
-button.add-user{
+
+button.add-user {
     width: 50px;
     height: 35px;
     font-size: 18px;
     border-radius: 5px;
     border: 1px solid #000;
 }
-button.add-user:hover{
-   cursor: pointer;
-   border: 2px solid #000;
+
+button.add-user:hover {
+    cursor: pointer;
+    border: 2px solid #000;
 }
 
-.chat-list-filter input[type="text"]{
+.chat-list-filter input[type="text"] {
     min-width: calc(100% - 60px);
     height: 35px;
     border-radius: 7px;
@@ -110,14 +118,14 @@ button.add-user:hover{
     padding-left: 65px;
     background-color: #eff2f5;
     color: #000;
-    
+
 }
 
-.chat-list-filter{
+.chat-list-filter {
     position: relative;
 }
 
-.chat-filter-search-icon{
+.chat-filter-search-icon {
     position: absolute;
     font-size: 14px;
     top: 18px;
@@ -125,30 +133,31 @@ button.add-user:hover{
     color: #54656f;
 }
 
-.chat-list-information{
+.chat-list-information {
     width: 100%;
     height: 75px;
 
     border-bottom: 1px solid #eff2f5;
     display: flex;
     flex-direction: row;
-    align-items:  center;
+    align-items: center;
     justify-content: space-between;
     padding: 0px 15px;
 
 }
-.chat-list-information-active{
+
+.chat-list-information-active {
     background-color: #eff2f5;
     cursor: pointer;
 }
 
-.chat-list-information:not(.chat-list-information-active):hover{
+.chat-list-information:not(.chat-list-information-active):hover {
     cursor: pointer;
     background-color: #f5f6f6;
 
 }
 
-.chat-detail-time{
+.chat-detail-time {
     font-size: 16px;
     align-items: flex-end;
     font-family: 'Kanit', sans-serif;
@@ -156,22 +165,27 @@ button.add-user:hover{
     width: 50px;
 
 }
+
 .chat-list-information .user-image {
     width: 45px;
     height: 45px;
 }
-.chat-list-information .user-image img{
+
+.chat-list-information .user-image img {
     width: 45px;
 }
-.user-image{
+
+.user-image {
     width: 40px;
     height: 40px;
 }
-.user-image img{
+
+.user-image img {
     width: 40px;
     border-radius: 30px;
 }
-.chat-list-information .chat-detail-title{
+
+.chat-list-information .chat-detail-title {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -182,7 +196,7 @@ button.add-user:hover{
     margin-left: 20px;
 }
 
-.user-chat-request-main{
+.user-chat-request-main {
     width: 100%;
     height: 50px;
     background-color: #eff2f5;
@@ -191,18 +205,18 @@ button.add-user:hover{
     display: flex;
     align-items: flex-start;
     flex-direction: row;
-    
+
 }
 
-.user-chat-request-left{
+.user-chat-request-left {
     width: 70%;
     height: 100%;
     padding: 5px;
     font-size: 14px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.user-chat-request-right{
+.user-chat-request-right {
     width: 30%;
     height: 100%;
     display: flex;
@@ -210,7 +224,8 @@ button.add-user:hover{
     justify-content: space-between;
 }
 
-.accept-button,.decline-button{
+.accept-button,
+.decline-button {
     width: 50%;
     height: 100%;
     color: #155724;
@@ -221,18 +236,18 @@ button.add-user:hover{
 
 }
 
-.decline-button{
+.decline-button {
     background-color: #f8d7da;
     color: #721c24;
 }
 
 
-.chat-detail-user{
+.chat-detail-user {
     font-family: 'Kanit', sans-serif;
     font-size: 18px;
 }
 
-.chat-detail-title .chat-detail-last-message{
+.chat-detail-title .chat-detail-last-message {
     text-overflow: ellipsis;
     overflow: hidden;
     width: 90%;
@@ -240,24 +255,25 @@ button.add-user:hover{
 }
 
 
-.no-dialog{
+.no-dialog {
     font-size: 14px;
     line-height: 20px;
     font-style: italic;
     color: #888;
 }
-.no-chat{
+
+.no-chat {
     width: 100%;
     height: 100%;
     font-size: 16px;
-    text-align: center;    
+    text-align: center;
     padding-top: 50px;
     font-style: italic;
     color: #888;
 
 }
 
-.chat-detail-area{
+.chat-detail-area {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -270,7 +286,8 @@ button.add-user:hover{
 
     overflow: hidden;
 }
-.chat-area{
+
+.chat-area {
     width: 100%;
     min-height: 550px;
     height: calc(100vh - (60px + 60px));
@@ -283,14 +300,14 @@ button.add-user:hover{
     overflow: auto;
 }
 
-.chat-detail-bottom{
+.chat-detail-bottom {
     width: 100%;
     min-height: 60px;
     height: 60px;
     background-color: #eff2f5;
 }
 
-.chat-detail-bottom{
+.chat-detail-bottom {
     width: 100%;
     height: 100%;
     display: flex;
@@ -302,7 +319,7 @@ button.add-user:hover{
 
 }
 
-.chat-detail-bottom input[type="text"]{
+.chat-detail-bottom input[type="text"] {
     width: 100%;
     min-width: 700px;
     height: 40px;
@@ -314,23 +331,23 @@ button.add-user:hover{
     font-weight: 600;
 }
 
-.message-row{
+.message-row {
     width: 100%;
     height: auto;
     display: flex;
     flex-direction: row;
     margin-top: 10px;
     position: relative;
-
+    transition: all 100ms;
 }
 
-.message-row:last-child{
+.message-row:last-child {
     margin-bottom: 10px;
-    
+
 }
 
-.message-area{
-    
+.message-area {
+
     min-width: 200px;
     width: auto;
     max-width: 500px;
@@ -343,7 +360,7 @@ button.add-user:hover{
     text-overflow: ellipsis;
     white-space: nowrap;
     display: flex;
-    flex-direction: row;  
+    flex-direction: row;
     justify-content: space-between;
     padding: 10px;
     background-color: #fff;
@@ -351,7 +368,7 @@ button.add-user:hover{
 }
 
 
-.me{
+.me {
     background-color: #d9fdd2;
     margin-left: auto;
     margin-right: 15px;
@@ -361,14 +378,14 @@ button.add-user:hover{
     border-bottom-right-radius: 10px;
 }
 
-.other{
+.other {
     margin-left: 15px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
 }
 
-.message{
+.message {
     height: 100%;
     width: 100%;
     white-space: pre-line;
@@ -379,7 +396,7 @@ button.add-user:hover{
     font-size: 18px;
 }
 
-.message-time{
+.message-time {
     width: 100px;
     height: auto;
     display: flex;
@@ -387,7 +404,7 @@ button.add-user:hover{
     text-align: right;
 }
 
-.message-time .time{
+.message-time .time {
     font-family: 'Roboto', sans-serif;
     font-size: 11px;
     color: #666;
@@ -398,28 +415,29 @@ button.add-user:hover{
     font-size: 24px;
     position: absolute;
     color: #fff;
-    
+
 }
-.left-side{
+
+.left-side {
     top: -9px;
     left: 8px;
 }
 
-.right-side{
+.right-side {
     top: -9px;
     right: 8px;
     color: #d9fdd2;
 }
 
-.not-found{
+.not-found {
     width: 100wh;
     height: 100vh;
     text-align: center;
     padding-top: 30px;
-    
+
 }
 
-.welcome-message{
+.welcome-message {
     margin-left: auto;
     margin-right: auto;
     display: block;
@@ -429,12 +447,14 @@ button.add-user:hover{
     padding-top: 15px;
     font-size: 24px;
 }
-.welcome-message::after{
+
+.welcome-message::after {
     content: 'ßy Murat Y.';
     display: block;
     font-size: 10px;
 }
-.welcome{
+
+.welcome {
     width: 500px;
     height: 400px;
     border: 1px solid #888;
@@ -446,14 +466,14 @@ button.add-user:hover{
 }
 
 
-.welcome-title{
+.welcome-title {
     width: 100%;
     height: 30px;
 
     border-bottom: 1px solid #888;
 }
 
-.welcome-title h4{
+.welcome-title h4 {
     display: inline-block;
     width: 100%;
     height: 100%;
@@ -463,7 +483,7 @@ button.add-user:hover{
 
 }
 
-.login-register{
+.login-register {
     width: 100%;
     height: 368px;
     background-color: #eff2f5;
@@ -471,7 +491,7 @@ button.add-user:hover{
     border-bottom-right-radius: 10px;
 }
 
-.login-register form{
+.login-register form {
     width: 300px;
     height: 100%;
     text-align: left;
@@ -479,26 +499,30 @@ button.add-user:hover{
     padding-top: 40px;
 }
 
-.login-register form label{
+.login-register form label {
     display: block;
     margin-top: 15px;
     margin-bottom: 3px;
 }
-.login-register form input{
+
+.login-register form input {
     width: 100%;
     height: 30px;
     padding-left: 5px;
     font-size: 18px;
 }
-.login-register form small{
+
+.login-register form small {
     display: inline-block;
     margin-top: 10px;
 }
-.space{
+
+.space {
     height: 30px;
     width: 100%;
 }
-.login-button{
+
+.login-button {
     margin-top: 10px;
     width: 100%;
     height: 40px;
@@ -506,30 +530,30 @@ button.add-user:hover{
     font-size: 18px;
 }
 
-.login-button:hover{
+.login-button:hover {
     cursor: pointer;
-    
+
 }
 
 
-.logout{
+.logout {
     margin-right: 10px;
     height: 100%;
     width: 100px;
 }
 
-.logout button{
+.logout button {
     width: 100%;
     height: 40px;
 }
 
 
-.logout button:hover{
+.logout button:hover {
     cursor: pointer;
 }
 
 
-.no-messages{
+.no-messages {
     width: 100%;
     height: 100%;
     display: flex;
